chore: minor fixes
formatting etc.

--- a/disclosures/2025-05-08.md
+++ b/disclosures/2025-05-08.md
@@ -1,7 +1,7 @@
-# Incident Disclosure 2025-05-08
+# Incident disclosure - 2025-05-08
 ## Summary
-During the off-boarding of a former strategist, several issues were discovered affecting strategies which the strategist was responsible for:
-- The strategist deployed several versions of APR Oracles meant to inflate the reported APR on the USDS Sky Compounder. This mainly impacted projected APYs reported in the UI, and to a lesser extent debt allocations on the yvUSDS-1 vault. A corrected version [[1]](#References) of this APR oracle was deployed and set on the central APR oracle.
+During the off-boarding of a former strategist in May 2025, several issues were discovered affecting strategies which the strategist was responsible for:
+- The strategist deployed several versions of APR Oracles between Nov 2024 and April 2025 meant to inflate the reported APR on the USDS Sky Compounder. This mainly impacted projected APYs reported in the UI, and to a lesser extent debt allocations on the yvUSDS-1 vault. A corrected version [[1]](#References) of this APR oracle was deployed and set on the central APR oracle.
 - The strategist refused to transfer the `management` role of strategies where his EOA held this role. In response, new versions of these strategies were deployed with Yearn's strategist multisig (SMS) as `management`. 
 - Most impacted strategies only had deposits from other Yearn V3 vaults, making the issue easy to correct. However, the USDS Sky Compounder had direct user deposits, so a migration has been made available in the Yearn UI.
 - No user funds were ever at risk thanks to Yearn V3’s architecture and permissioning. Nonetheless, remaining depositors in the deprecated USDS Sky Compounder [[2]](#References) are encouraged to migrate to the new version via the UI [[3]](#References).
