--- a/disclosures/2025-08-13.md
+++ b/disclosures/2025-08-13.md
@@ -1,4 +1,5 @@
-## Incident Overview
+# Incident disclosure - 2025-08-13
+## Summary
 
 - A report with a valid vulnerability was submitted for `yBOLD` through Immunefi
 - The vulnerability could cause the yield not to flow as intended to `ysyBOLD`
